--- a/docs/css/_base.scss
+++ b/docs/css/_base.scss
@@ -1,23 +1,46 @@
+// Algolia's UI-Component :
+// ------------------------
+//
+// VARIABLES
+// ---------
+
+// Breakpoints
+$bp-huge: 2000px;
+$bp-big: 1440px;
+$bp-medium: 960px;
+$bp-small: 768px;
+
+// Dimensions
+$max-container-width: 940px;
+$navigation-height: 50px;
+$margin: 16px;
+$anchor-offset: 100px;
+
+
+// Fonts
+$font-name: "Raleway";
+$font-fallback: Helvetica Neue, helvetica;
+$font-settings:  $font-name, $font-fallback;
+
 $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base: 16px;
 
 $headings-font-family: "Raleway";
 $headings-font-weight: 300;
 
+// Colors
+$red-pink: #fb366e;
+$steel: #788795;
+$black: #0a1724;
+$white-75: rgba(white, 0.75);
 $brand-primary: #1d96c7;
-//$code-color: #a3b6cb;
-
 $text-color: rgba(black, 0.75);
-
-$anchor-offset: 100px;
 $community-color: #674492;
 $success-color: #58d158;
 $gray-light: #f3f3f3;
 $dark-blue: #0d1d30;
 $light-blue: lighten($dark-blue, 70%);
-
 $secondary-color: green;
 
-$navbar-height: 50px;
 
 
