--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,15 +1,46 @@
-$color-border: #3A3A3A;
-$color-border-light: lighten($color-border, 15%);
-$color-category-header-background: #3C4658;
-$color-highlight-header-background: lighten($color-category-header-background, 15%);
-$color-highlight-text: #0064E1;
-$color-selected-background: #E7EDF3;
-$color-selected-text: #0064E1;
-$color-left-column-bg: #F1F3F5;
-$color-left-column: #555;
+// SEARCHBOX
+$searchbox-config: (
+  input-width: 200px,
+	input-height: 32px,
+	border-width: 1px,
+	border-radius: 16px,
+	input-border-color: #CCCCCC,
+	input-focus-border-color: #AAAAAA,
+	input-background: #FFFFFF,
+	input-focus-background: #FFFFFF,
+	font-size: 12px,
+	placeholder-color: #AAAAAA,
+	icon-size: 14px,
+	icon-position: left,
+	icon-color: #6D7E96,
+	icon-background: #458EE1,
+	icon-background-opacity: 0,
+	icon-clear-size: 8px
+) !default;
 
-$breakpoint-medium: 568px;
-$breakpoint-large: 768px;
+// DROPDOWN
+$dropdown-config: (
+  main-color: #458EE1,
+  layout-type: normal,
+  layout-width: normal,
+  layout-alignment: align,
+  background-color: #fff,
+  border-radius: 4,
+  border-width: 1,
+  border-color: #d9d9d9,
+  box-shadow: light,
+  branding-position: bottom,
+  spacing: normal,
+  include-desc: yes,
+  background-category-header:  #ffffff,
+  font-size: normal,
+  header-color: #33363D,
+  title-color: #02060C,
+  subtitle-color: #A4A7AE,
+  text-color: #63676D,
+  highlight-color: #3881FF,
+  highlight-opacity: .1,
+  highlight-type: underline
+) !default;
 
-$dropdown-min-width-medium: 400px;
-$dropdown-min-width-large: 600px;
+$builder-height: 260px;
