fix(doc): docsearch header link

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -6,7 +6,7 @@
         <img alt='Algolia Community' class='ac-logo__sm' src='https://res.cloudinary.com/hilnmyskv/image/upload/v1461180081/logo-community-sm.svg'>
       </a>
       <span class='ac-nav-brand-breadcrumb'></span>
-      <a class='ac-nav-brand-title' href='./' title='Home'>DocSearch</a>
+      <a class='ac-nav-brand-title' href='/docsearch/' title='Home'>DocSearch</a>
     </div>
     <div class='ac-nav-menu'>
       <div class='ac-nav-searchbox'>
