--- a/src/styles/_dropdown.scss
+++ b/src/styles/_dropdown.scss
@@ -107,7 +107,8 @@
   $include-desc: true,
   $background-category-header:  #FFFFFF,
   $highlight-opacity: .1,
-  $highlight-type: 'underline'
+  $highlight-type: 'underline',
+  $code-background: #EBEBEB
 ){
 
   $header-size: 1em;
@@ -138,7 +139,6 @@
         right: 48px;
       }
     }
-
     &.algolia-autocomplete-left .ds-dropdown-menu{
       @include alignment-type(left);
       &:before {
@@ -347,6 +347,19 @@
 
         &::before{
           display: none;
+        }
+      }
+
+      code {
+        padding: 1px 5px;
+        font-size: 90%;
+        border: none;
+        color: #222222;
+        background-color: $code-background;
+        border-radius: 3px;
+        font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+        .algolia-docsearch-suggestion--highlight {
+          background: none;
         }
       }
 
