Fixed link for echo
Signed-off-by: Vishal Rana <vr@labstack.com>

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -104,7 +104,7 @@ layout: default
           .spacer10
           Marionette.js
       .col-sm-4.showcase
-        %a{:href => "https://labstack.com/echo", :target => "_blank"}
+        %a{:href => "https://echo.labstack.com", :target => "_blank"}
           %img.img-responsive.logo{:src => "./img/showcase/logo-echo.svg", :alt => "echo"}
           .screen-wrapper
             %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-echo.png", :alt => "echo docsearch demo"}
