docs(website): more featured websites

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -105,18 +105,28 @@ layout: default
           Marionette.js
       .col-sm-4.showcase
         %a{:href => "https://labstack.com/echo", :target => "_blank"}
-          %img.img-responsive.logo{:src => "./img/showcase/logo-echo.svg", :alt => "echo"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-echo.png", :alt => "echo"}
           .screen-wrapper
-            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-echo.png", :alt => "echo docsearch demo"}
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-echo.gif", :alt => "echo docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           Echo
       .col-sm-4.showcase
         %a{:href => "https://serge.io/", :target => "_blank"}
           %img.img-responsive.logo{:src => "./img/showcase/logo-serge.svg", :alt => "serge"}
           .screen-wrapper
-            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-serge.png", :alt => "serge docsearch demo"}
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-serge.gif", :alt => "serge docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           Serge
+      .col-sm-4.showcase
+        %a{:href => "https://batch.com/", :target => "_blank"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-batch.svg", :alt => "batch"}
+          .screen-wrapper
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-batch.gif", :alt => "batch docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
+          .spacer10
+          Batch
       .col-sm-4.showcase
         .placeholder-logo
         .placeholder-screen
