s/Search in the doc/Search the docs

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -12,7 +12,7 @@
       <div class='ac-nav-searchbox'>
         <form class='searchbox' id='docsearch-form' novalidate='novalidate' onsubmit='return false;' style='visibility:hidden;height:0'>
           <div class='searchbox__wrapper' role='search'>
-            <input autocomplete='off' class='searchbox__input' id='docsearch' name='search' placeholder='Search in the doc' required='required' type='search'>
+            <input autocomplete='off' class='searchbox__input' id='docsearch' name='search' placeholder='Search the docs' required='required' type='search'>
             <button class='searchbox__submit' title='Submit your search query.' type='submit'>
               <svg aria-label='Search' role='img'>
                 <use xlink:href='#sbx-icon-search-13' xmlns:xlink='http://www.w3.org/1999/xlink'></use>
