docs(apiplatform): Adding API Platform as a showcase

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -128,6 +128,14 @@ layout: default
           .spacer10
           Batch
       .col-sm-4.showcase
+        %a{:href => "https://api-platform.com/", :target => "_blank"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-apiplatform.svg", :alt => "API Platform"}
+          .screen-wrapper
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-apiplatform.gif", :alt => "API Platform docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
+          .spacer10
+          API Platform
+      .col-sm-4.showcase
         .placeholder-logo
         .placeholder-screen
         .spacer10
