--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -100,14 +100,14 @@
 .algolia-docsearch-footer {
   border-top: 1px solid $color-border-light;
   text-align: right;
-  font-size: 0px;
+  font-size: 12px;
   padding: 4px 2px 0 0;
   color: #333;
 
   .algolia-docsearch-footer--logo {
     display: inline-block !important;
     width: 111px;
-    height: 100%;
+    height: 15px;
     text-indent: 101%;
     overflow: hidden;
     white-space: nowrap;
@@ -115,6 +115,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     vertical-align: middle;
+    padding: 0px !important;
   }
 }
 
