Logo algolia updated

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -2,8 +2,8 @@
   <div class='ac-nav-container'>
     <div class='ac-nav-brand'>
       <a class='ac-logo' href='https://community.algolia.com/' title='Algolia Community'>
-        <img alt='Algolia Community' class='ac-logo__lg' src='https://res.cloudinary.com/hilnmyskv/image/upload/logo-community-inline-dark.svg' width='150'>
-        <img alt='Algolia Community' class='ac-logo__sm' src='https://res.cloudinary.com/hilnmyskv/image/upload/v1461180081/logo-community-sm.svg'>
+        <img alt='Algolia Community' class='ac-logo__lg' src='https://res.cloudinary.com/hilnmyskv/image/upload/v1484217596/algolia-community-logo-darkbg.svg' width='150'>
+        <img alt='Algolia Community' class='ac-logo__sm' src='{{ site.baseurl }}/img/logo-community.svg'>
       </a>
       <span class='ac-nav-brand-breadcrumb'></span>
       <a class='ac-nav-brand-title' href='/docsearch/' title='Home'>DocSearch</a>
