--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -11,9 +11,9 @@
   </div>
   <div class='ac-footer-container ac-footer-brand'>
     <p>This project is part of</p>
-    <img class='ac-footer-brand-icon' src='https://res.cloudinary.com/hilnmyskv/image/upload/logo-community.svg'>
+    <img class='ac-footer-brand-icon' src='{{site.baseurl}}/img/community-badge.svg'>
     <figure>
-      <img class='ac-footer-brand-logo' src='https://res.cloudinary.com/hilnmyskv/image/upload/v1463417234/algolia-community_n6tixd.svg'>
+      <img class='ac-footer-brand-logo' src='https://res.cloudinary.com/hilnmyskv/image/upload/v1484219849/algolia-community-logo-words-darkbg.svg'>
       <figcaption>Algolia Community</figcaption>
     </figure>
     <a class='ac-footer-btn ac-footer-btn-cta' href='https://community.algolia.com/'>See More</a>
