updated docsearch references

--- a/docs/css/_home.scss
+++ b/docs/css/_home.scss
@@ -156,27 +156,41 @@ html, body {
       text-decoration: none;
     }
   }
+  .img-container {
+    height: 55px;
+  }
+
   .showcase {
     margin-top: 40px;
     text-align: center;
+
     .logo {
-      display: inline-block;;
-      height: 60px;
+      display: inline-block;
       margin-bottom: 20px;
+      max-width: 90px;
+      max-height: 40px;
     }
     .example {
       width: 100%;
     }
   }
+
   .screen-wrapper {
     position: relative;
-    height: 201px;
     overflow: hidden;
+
+    figure {
+      height: 0;
+      padding-bottom: 60%;
+      background-repeat: no-repeat;
+    }
+
     .freezeframe-container {
 	    border-radius: 3px;
-      max-height: 100%;
+
     }
     .screen-mask {
+      width: 100%;
       position: absolute;
       top: 0;
       pointer-events: none;
