--- a/docs/index.haml
+++ b/docs/index.haml
@@ -156,9 +156,9 @@ layout: default
             %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-mailjet.gif", :alt => "mailjet docsearch demo"}
             %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
-          Batch
+          Mailjet
       .col-sm-4.showcase
-        %a{:href => "https://dev.mailjet.com/guides/", :target => "_blank"}
+        %a{:href => "https://api-platform.com/docs/distribution/", :target => "_blank"}
           .img-container
             %img.img-responsive.logo{:src => "./img/showcase/logo-apiplatform.svg", :alt => "API Platform"}
           .screen-wrapper
