add message when validating the form

--- a/docs/_includes/join-form.haml
+++ b/docs/_includes/join-form.haml
@@ -20,3 +20,15 @@
   .text-center
     %button.btn.btn-primary.btn-lg{type: 'submit'}
       JOIN THE PROGRAM!
+
+%form.join-form.join-form-validated
+  %h3 Thank you !
+  .spacer20
+  %p.text-sm
+    %b
+      We'll review your request shortly,
+    after making sure your website is eligible to Docsearch.
+  %p.text-sm
+    This is a manual process and can take some time.
+  %p.text-sm We'll then email you the code you need to integrate on your website
+  .spacer20
