docs(places): Replace utm referencing places
Replaced the utm that was referencing places_website

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -23,11 +23,11 @@
   <div class='ac-footer-actions'>
     <div class='footer-container'>
       <p>Build unique search experiences with Algolia</p>
-      <a class='ac-footer-btn ac-footer-btn-ghost-grey' href='https://www.algolia.com/why?utm_medium=social-owned&amp;utm_source=places%20website&amp;utm_campaign=homepage&amp;utm_term=why'>
+      <a class='ac-footer-btn ac-footer-btn-ghost-grey' href='https://www.algolia.com/why?utm_medium=social-owned&amp;utm_source=docsearch%20website&amp;utm_campaign=homepage&amp;utm_term=why'>
         See Why
         <span class='ac-icon-triangle'></span>
       </a>
-      <a class='ac-footer-btn ac-footer-btn-ghost-pink' href='https://www.algolia.com/users/sign_up?utm_medium=social-owned&amp;utm_source=places%20website&amp;utm_campaign=homepage&amp;utm_term=get_started'>Get Started For Free</a>
+      <a class='ac-footer-btn ac-footer-btn-ghost-pink' href='https://www.algolia.com/users/sign_up?utm_medium=social-owned&amp;utm_source=docsearch%20website&amp;utm_campaign=homepage&amp;utm_term=get_started'>Get Started For Free</a>
     </div>
   </div>
 </section>
