add quill to showcase

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -167,6 +167,15 @@ layout: default
           .spacer10
           API Platform
       .col-sm-4.showcase
+        %a{:href => "https://quilljs.com/docs/quickstart/", :target => "_blank"}
+          .img-container
+            %img.img-responsive.logo{:src => "./img/showcase/logo-quill.png", :alt => "Quill"}
+          .screen-wrapper
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-quill.gif", :alt => "Quill docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
+          .spacer10
+          Quill
+      .col-sm-4.showcase
         .placeholder-logo
         .placeholder-screen
         .spacer10
