docs(bootstrap): update info and show in showcase
It's now 🚨LIVE🚨 which means that we should definitely put this one as one of the first, I put it as the third one, which pushes React Native to the second row, but that makes sense, since React and React Native are a similar group of interested people.

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -50,6 +50,15 @@ layout: default
           .spacer10
           React
       .col-sm-4.showcase
+        %a{:href => "https://getbootstrap.com/docs/4.0", :target => "_blank"}
+          .img-container
+            %img.img-responsive.logo{:src => "./img/showcase/logo-bootstrap.png", :alt => "bootstrap"}
+          .screen-wrapper
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-bootstrap.gif", :alt => "bootstrap docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
+          .spacer10
+          Bootstrap
+      .col-sm-4.showcase
         %a{:href => "http://facebook.github.io/react-native/docs/getting-started.html", :target => "_blank"}
           .img-container
             %img.img-responsive.logo{:src => "./img/showcase/logo-react.png", :alt => "react native"}
